--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 	</head>
 	<body style="background-color:yellow;"> 
 		<h1>Mis trabajos de HTML</h1>
-		<h1><a href="ejemplo.html">Práctica 1</a></h1>
-	</body>
+		<h1><a href="activida 2.html">Práctica 1</a></h1>
+	</body><h1><a href="Errores(1).htmlterminado">Práctica 2</a></h1>
+	<h1><a href="berner acabado.html">Práctica 3</a></h1>
+	<h1><a href="ACTIVIDAD1.(1.html">Práctica 4</a></h1>
+	
+	
 
 </html>
 
